# fw_routes

./: .coverage  .env.example  .gitignore  Dockerfile  FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  conftest.py  entrypoint.sh  install.sh  manage.py  pyproject.toml  renovate.json5  requirements.txt
.github/workflows/: ruff.yml  test.yml
gpx_routes/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
routes/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  utils.py  views.py
routes/management/commands/: regenerate_thumbnails.py  update_start_locations.py
routes/migrations/: 0001_initial.py  0002_route_route_coordinates.py  0003_startpoint.py  0004_remove_map_html_field.py  0005_remove_end_coordinates.py
routes/static/admin/js/: map_widget.js
routes/static/routes/css/: main.css
routes/static/routes/js/: route_detail.js
routes/templates/registration/: login.html
routes/templates/routes/: base.html  bulk_upload.html  route_detail.html  route_list.html  route_upload.html
routes/tests/: __init__.py  conftest.py  test_admin.py  test_commands.py  test_forms.py  test_integration.py  test_models.py  test_services.py  test_tasks.py  test_urls.py  test_utils.py  test_views.py
routes/tests/fixtures/: invalid.gpx  sample_route.gpx  sample_track.gpx  waypoints_only.gpx
