[project]
name = "gpx-routes"
version = "0.1.0"
description = "A Django web application for managing GPS routes (GPX files)"
requires-python = ">=3.12"

dependencies = [
    "Django>=6.0",
    "django-tasks>=0.1.0",
    "django-tomselect>=2025.9.1",
    "gpxpy>=1.5.0",
    "pillow>=10.0.0",
    "folium>=0.14.0",
    "django-storages>=1.14.0",
    "boto3>=1.28.0",
    "playwright>=1.40.0",
    "whitenoise>=6.5.0",
    "defusedxml>=0.7.1",
    "gunicorn>=22.0.0",
    "dotenv>=0.9.9",
    "dj-database-url>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
    "mypy",
]
